  enter key bug (propagating event to the first button)
- mouseover on system messages pause the fadeOut timer giving
  more time to read the messages
- P4A_Table_Col::setHeader() method was marked deprecated
- P4A_Table_Rows and P4A_Table_Col now trigger the onclick event 
  (in addition to beforeclick and afterclick) useful if you don't
  want the table to move your linked P4A_Data_Source

3.0.0-rc3
- file upload check and error reporting was enhanced
- a bug with file download within a non-ajax environment was solved
- Zend Framework was updated to 1.5.2
- P4A_Redirect_To_File() global function now checks if the file really
  exists within P4A_UPLOADS_DIR, otherwise throws a P4A_Exception
- P4A_Tab_Pane's pages' labels are now auto translated on getAsString()
- P4A_Field::getAsDate() does not set the field "readonly" anymore thus
  now dates can you written by hand too
- jQuery was updated to 1.2.5
- jQuery::UI::datepicker javascript file was replaced with the packed one
  which is only 20kb instead of 60kb
- folder_home icon was changed with a new one that degrades to GIF in a
  better way
- jQuery::UI::core, draggable and droppable 1.5b4 were added
- P4A_DB_Navigator's drag&drop movements were implemented
- P4A_DB_Table::_setupPrimaryKey() method was added, it just calls
  the parent::_setupPrimaryKey() avoiding exceptions (used when the
  table has no primary keys)
- P4A_DB_Source now supports database views within the setTable() method
- P4A_DB_Source::load() now does not set pk if P4A_DB_Table does not
  return one or more pk(s)
- jQuery::dimensions plugin was removed because it has been bundled to
  the jQuery core
- P4A_Mask's default template now includes CSS first and then JS, solving
  some jQuery related issues (on safari/opera)
- fix_date option was added to P4A_I18N::_normalize() method
- jQuery::form plugin was updated to 2.10

3.0.0-rc2
- a bug with P4A_Field::getAsCheckbox() method was solved
- when a P4A_Field's value is coming from a POST,