@@ -8,6 +8,7 @@
 - P4A_Table_Rows and P4A_Table_Col now trigger the onclick event 
   (in addition to beforeclick and afterclick) useful if you don't
   want the table to move your linked P4A_Data_Source
+- P4A_Table::showTitleBar() method was removed because obsolete
 
 3.0.0-rc3
 - file upload check and error reporting was enhanced
